--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Sidebar</title>
 
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+
+	<div class="sidebar">
+		<div class="user">
+			<div class="user-img">
+			
+				<img src="images/user.svg">	
+			</div>
+
+			<div class="user-details">
+				<h2>Mr Aftab</h2>
+				<p>FrontEnd Developer</p>	
+			</div>
+			
+		</div> <!-- user div end -->
+
+		<div class="sidebar-items">
+			<ul>
+
+				<li><img src="images/dashboard.svg"> <p>Dashboard</p> </li>
+				<li><img src="images/github.svg"> <p>Github</p> </li>
+				<li><img src="images/message.svg"> <p>Message</p> </li>
+				<li><img src="images/compass.svg"> <p>Compass</p> </li>
+				<li><img src="images/headphones.svg"> <p>Headphone</p> </li>
+				<li><img src="images/setting.svg"> <p>Setting</p> </li>
+
+			</ul>
+
+			<ul class="logout">
+
+				<li><img src="images/logout.svg" class="logout-icon"> <p>Logout</p> </li>
+				
+			</ul>
+		</div>
+	</div>
+</body>
+</html>
